# zemljanichka-homework-2

./: CMakeLists.txt  README.md
.github/workflows/: cpp.yml
number/: number-test.cpp  number.cpp  number.h
scripts/: apply-fixes.py  run-tests.py
trie/: trie-naive.cpp  trie-naive.h  trie-test.cpp  trie.cpp  trie.h
